--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" data-framework="react">
 
 <head>
-  <title>Build Your Own React</title>
-  <style>
-    .test {
-      
-    }
-  </style>
+  <meta charset="utf-8">
+  <title>React • TodoMVC</title>
 </head>
 
 <body>
-  <div id="root"></div>
+  <section class="todoapp">
+
+  </section>
+  <footer class="info">
+    <p>Double-click to edit a todo</p>
+    <p>Created by
+      <a href="http://github.com/petehunt/">petehunt</a>
+    </p>
+    <p>Part of
+      <a href="http://todomvc.com">TodoMVC</a>
+    </p>
+  </footer>
+
   <script src="./bundle.js"></script>
+
 </body>
 
 </html>
